Put padding on inner div to stop animation jump, no important on hidden-js so that size can be calculated by JS.

--- a/web/cobrands/fixmystreet/base.scss
+++ b/web/cobrands/fixmystreet/base.scss
@@ -1345,7 +1345,7 @@ ul.breadcrumb {
 
 // hide anything with this class if js is working
 .js .hidden-js {
-  display: none !important;
+  display: none;
   visibility: hidden;
 }
 
